# alter-ego

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: backend-dev.md  db-engineer.md  frontend-dev.md  langgraph-dev.md  test-engineer.md
.claude/skills/: coding-conventions.md  context7-usage.md  supabase-patterns.md  testing-rules.md
backend/: .env.example  main.py  pyproject.toml
backend/api/: activity.py  chat.py  deps.py  follow.py  image.py  lora.py  persona.py  schedule.py  sns.py
backend/core/: activity.py  graph.py  image_gen.py  scheduler.py  supabase_client.py
backend/models/: schemas.py
backend/tests/: conftest.py  test_activity.py  test_auth.py  test_lora.py  test_persona.py  test_schedule.py  test_websocket.py
docs/: FULL_PLAN.md  MVP_PLAN.md
docs/sql/: 001_init_tables.sql  002_persona_images.sql  003_persona_images_storage.sql  004_sns_tables.sql  005_persona_lora.sql  006_activity_tables.sql
frontend/: .env.example  .gitignore  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: auth.setup.ts  auth.spec.ts  chat.spec.ts  i18n-helpers.ts  persona.spec.ts
frontend/src/: App.tsx  i18n.ts
frontend/src/components/: ActivityLog.tsx  AuthForm.tsx  ChatWindow.tsx  MessageBubble.tsx  PersonaForm.tsx  PostCard.tsx  ScheduleForm.tsx
frontend/src/hooks/: useAuth.ts  useI18n.ts  useWebSocket.ts
frontend/src/lib/: supabase.ts
frontend/src/pages/: ManagerPage.tsx  PostDetailPage.tsx  ProfilePage.tsx  SNSFeedPage.tsx
frontend/src/types/: index.ts
